# gamebit-core-raspberry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: CMakeLists.txt
blackops/: CMakeLists.txt  blackops.cpp  blackops.h  calibration.cpp  config.in.h  configuration.cpp  controller.cpp  controller.h  hardware.h  main.cpp  post.cpp  version.in.h
blackops/dev/: CMakeLists.txt  bd.cpp  bd.h  bus.cpp  bus.h  file.cpp  file.h  ili9341s.cpp  ili9341s.h  sds.cpp  sds.h  spi.cpp  spi.h  uart.cpp  uart.h
blackops/dev/bd/: CMakeLists.txt
blackops/dev/bd/fat/: CMakeLists.txt
blackops/dev/bd/raw/: CMakeLists.txt  crc.cpp  crc.h  mbr.h
blackops/dev/display/: CMakeLists.txt  cm256x16.h  cs8x16.h  cs8x8.h  ili9341.h
blackops/dev/sd/: CMakeLists.txt  sd.h
board/: fp-info-cache  fp-lib-table  gb_1_0_pico-cache.lib  gb_1_0_pico-rescue.lib  gb_1_0_pico.kicad_pcb  gb_1_0_pico.kicad_pcb-bak  gb_1_0_pico.kicad_prl  gb_1_0_pico.kicad_pro  gb_1_0_pico.kicad_sch  gb_1_0_pico.net  gb_1_0_pico.pro  gb_1_0_pico.sch  gb_1_0_pico.snapshot1.kicad_pcb  gb_1_0_pico.snapshot2.kicad_pcb  gb_1_0_pico.snapshot2.kicad_pcb-bak  gb_1_0_pico.snapshot3.kicad_pcb  sym-lib-table
board/components/: audio.lib  uSD_push-push_ebay.dcm  uSD_push-push_ebay.lib
board/export/: gb_1_0_pico-B_Cu.gbr  gb_1_0_pico-B_Mask.gbr  gb_1_0_pico-B_Paste.gbr  gb_1_0_pico-B_SilkS.gbr  gb_1_0_pico-Edge_Cuts.gbr  gb_1_0_pico-F_Cu.gbr  gb_1_0_pico-F_Mask.gbr  gb_1_0_pico-NPTH.drl  (+6 more)
gamebit/: CMakeLists.txt  com.cpp  com.h  config.in.h  gamebit.cpp  gamebit.h  io.cpp  io.h  main.cpp  post.cpp  uld.h  version.in.h
gamebit/uld/: CMakeLists.txt  archive.cpp  archive.h  elf32.cpp  elf32.h  object.cpp  object.h  target.cpp  target.h
gamebit/uld/elf/: memory.h  runtime.h
include/: CMakeLists.txt  lcd.h
lib/: CMakeLists.txt  emc.h  gfx.h  uld.h
lib/core/: CMakeLists.txt  char.h  convert.h  dev.h  error.cpp  error.h  fmt.h  fpu.h  global.h  gpu.h  hardware.h  inline.h  log.cpp  log.h  memory.h  os.h  sys.h  traits.h  util.h
lib/core/dev/: CMakeLists.txt  bd.cpp  bd.h  block.cpp  block.h  dev.cpp  lcd.h  pwm.h  sd.h  spio.cpp  spio.h
lib/core/dev/bd/: CMakeLists.txt  bd.cpp  drive.cpp  drive.h  sd.h  spio.cpp  spio.h
lib/core/dev/bd/fat/: CMakeLists.txt  fat.h  part.cpp  part.h
lib/core/dev/bd/raw/: CMakeLists.txt
lib/core/dev/lcd/: CMakeLists.txt  bus.h  ili9341.cpp  ili9341.h  lcd.cpp
lib/core/dev/lcd/gfx/: CMakeLists.txt  canvas.cpp  canvas.h  dc.cpp  dc.h  gfx.h  metrics.cpp  metrics.h  raster.h  scene.cpp  scene.h  sprite.cpp  sprite.h  surface.cpp  surface.h  tile.h
lib/core/dev/lcd/gfx/raster/: CMakeLists.txt  pbo.cpp  pbo.h
lib/core/dev/lcd/gfx/tile/: CMakeLists.txt  cbo.cpp  cbo.h
lib/core/dev/lcd/gfx/tile/font/: std8x8s0.inc.cpp
lib/core/dev/lcd/gfx/tile/palette/: rgb565.inc.cpp
lib/core/dev/pwm/: CMakeLists.txt  bus.h  osc.cpp  osc.h  pwm.cpp
lib/core/dev/spio/: spio.cpp
lib/core/dpu/: soft.h
lib/core/fpu/: soft.h
lib/core/gpu/: CMakeLists.txt
lib/core/memory/: allocator.h  bank.h  fragment.h  hash_map.h  linked_list.h  linked_list_base.h  linked_list_traits.h  memory.cpp  metrics.h  ordered_list.h  page.h  place.h  policy.h  pool.h  pool_base.h  resource.h
lib/core/memory/manager/: CMakeLists.txt  heap.h  shared.h
lib/core/sys/: CMakeLists.txt  fmt.h  fs.h  ios.h
lib/core/sys/fat/: fat.h  part.cpp  part.h
lib/core/sys/fs/: CMakeLists.txt
lib/core/sys/fs/fat/: CMakeLists.txt  node.cpp  node.h  partition.cpp  partition.h
lib/core/sys/fs/raw/: CMakeLists.txt  drive.cpp  drive.h  filesystem.cpp  filesystem.h  raw.h
lib/core/sys/ios/: CMakeLists.txt  bio.cpp  bio.h  fio.cpp  fio.h  ios.cpp  pio.cpp  pio.h  rio.cpp  rio.h  sio.cpp  sio.h
lib/core/sys/raw/: CMakeLists.txt  drive.cpp  drive.h  mbr.h
lib/emc/: CMakeLists.txt  command.cpp  command.h  config.in.h  emc.cpp  emc.h  gateway.cpp  gateway.h  protocol.h  reactor.cpp  reactor.h  session.cpp  session.h  timer.cpp  timer.h
lib/fat/: CMakeLists.txt  hw_config.c
lib/fat/sd_driver/: hw_config.h  spi.h
lib/gfx/: CMakeLists.txt  ac.cpp  dc.cpp  dc.h  device.cpp  device.h  raster.h  surface.cpp  surface.h  tile.h  vector.h
lib/gfx/assets/: CMakeLists.txt
lib/gfx/driver/: CMakeLists.txt  stdc.cpp  stdc.h
lib/gfx/driver/common/: CMakeLists.txt
lib/gfx/raster/: pbo.cpp  pbo.h
lib/gfx/support/: CMakeLists.txt  sdi.cpp  sdi.h
lib/gfx/tile/: cbo.cpp  cbo.h  cmo.cpp  cmo.h  cso.cpp  cso.h
lib/host/: CMakeLists.txt  char.h  compare.h  dbg.h  dpu.h  error.h  global.h  gpu.h  hash.h  log.cpp  log.h  mmi.h  os.h  sys.h  util.h
lib/host/dpu/: CMakeLists.txt  none.h
lib/host/fpu/: CMakeLists.txt  none.h
lib/host/gpu/: none.cpp  none.h
lib/host/mmi/: CMakeLists.txt  bank.h  fragment.h  hash_map.h  linked_list_traits.h  metrics.h  mmi.cpp  page.h  policy.h  pool.h  pool_base.h  resource.h
lib/host/mmi/manager/: CMakeLists.txt  heap.h  shared.h
lib/host/sys/: CMakeLists.txt  fmt.h  ios.h  sys.cpp
lib/host/sys/ios/: CMakeLists.txt  bio.cpp  bio.h  pio.cpp  pio.h  rio.cpp  rio.h  sio.cpp  sio.h
test/: CMakeLists.txt  LCDConfig.hpp  LCD_ILI9341.cpp  LCD_ILI9341.hpp  hw_config.c  lcd-config.h  lcd-setup.h  smp.cpp  smp.h  test-blink.cpp  test-elf-1.cpp  test-elf-2.cpp  test-elf-3.cpp  test-fat-1.cpp  test-graphics-0.cpp  test-graphics-1.cpp  test-graphics-2.cpp  test-graphics-3.cpp  test-graphics-4.cpp  test-graphics-basic.cpp  test-lcd-1.cpp  test-sound-1.cpp  test-spi-0.cpp  test-spi-sd.h
test/elf/: CMakeLists.txt
test/elf-thumb-basic/: globaldata.c  hello.c  localcall  localcall.c  localdata.c  makefile  sumextern.c  sumxy.c  sumxyz.c
test/elf-thumb-gamebit/: eabi.h  example.txt  game.c  game.h  hello.c  makefile  tetris.c  tetris.h
test/elf-thumb-usr/: file.h  gfx.h  main.01.c  main.02.c  makefile  math.h  memory.h  midi.c  string.h  sys.c  sys.h
test/elf/arm-none-static/: CMakeLists.txt  main.c  sumxy.c
test/share/: .file.h.kate-swp  CMakeLists.txt  file.cpp  file.h  function.h  gfx-surface.cpp  gfx-surface.h  gfx.cpp  gfx.h  process.cpp  process.h  string.cpp  string.h  sys.cpp  sys.h
(+12 files in other folders)
